--- a/404.html
+++ b/404.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<title>404~♪</title>
-	<meta http-equiv="refresh" content="2; url=https://www.youtube.com/watch?v=ZOf0K9nFxog">
-	<script type="text/javascript" src="/static/404.js"/></script>
+	<title>Error 404~♪ (Not Found)!!1</title>
+	<meta http-equiv="refresh" content="3; url=https://www.youtube.com/watch?v=ZOf0K9nFxog"/>
+	<script type="text/javascript" src="/static/404.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico"/>
 	<link rel="stylesheet" type="text/css" href="/static/style.css"/>
+	<style>
+		*{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#fff;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}* > body{transform: rotate(-5deg); background:url(https://www.google.com/images/errors/robot.png) 100% 5px no-repeat;padding-right:205px}p{margin:11px 0 22px;overflow:hidden}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{background:url(/static/button/google-2011.png) no-repeat;margin-left:-5px}@media only screen and (min-resolution:192dpi){#logo{background:url(https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) no-repeat 0% 0%/100% 100%;-moz-border-image:url(https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) 0}}@media only screen and (-webkit-min-device-pixel-ratio:2){#logo{background:url(https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_150x54dp.png) no-repeat;-webkit-background-size:100% 100%}}#logo{display:inline-block;height:54px;width:150px}
+	</style>
 </head>
-<body class="content">
-	<div style="font-size: 200px;">404~♪</div>
+<body>
+	<span id="logo"></span>
+	<p><strong>404.</strong> <ins>You have reached the end of time.</ins></p>
+	<p>I won't ask where we're going. <ins>Take me back.</ins></p>
 </body>
+
 </html>
