--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,14 @@ I just really like metaprogramming.</p>
 </ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
+<p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
+If you prefer e-mail or discord, my contact info is below.
+I’ll congratulate you if your e-mail scraper can read POSIX shell command language.</p>
+<pre><code><span class="term-prompt">microsounds@effe</span>:<span class="term-dir">~</span>$ cat contact_info.txt | gzip | base64 -w 0 \
+&gt;	| sed -E -e 's/(.)(.)/\2\1/g' -e 's/.&#123;4&#125;/&amp; /g' | fold -s
+4HIs AAAA AACA 9AVP QhLA yGRC FXiq 5maF Alkp qcmX mJmb CWkm uFnQ xJbp qODS HuJr
+b+cl ZKFn fyFl VKKY SxFU Yq5m pymZ pBcZ JAR/ fkH1 AAAA
+</code></pre>
 <h2>Links<span id="Links"></span></h2>
 <div class="center">
 <p><a href="https://debian.org/distrib"><img src="/static/button/debian.png" alt="ico-debian" /></a>
