--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 820, commit <code>7f10631</code>.</strong></p>
-<p><strong>“bash: Nothing important”</strong></p>
+<p><strong>Revision No. 821, commit <code>4f44f2f</code>.</strong></p>
+<p><strong>“Documentation, updated debootstrap install instructions”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -108,19 +108,19 @@
 <p>View changelog since the last revision as <a href="https://github.com/microsounds/atelier/compare/HEAD~1...HEAD"> <code>diff HEAD~1...HEAD</code></a></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
-<p>If this document is <em>25.7KiB</em> in
+<p>If this document is <em>25.9KiB</em> in
 size, and the approximate size of all comment lines of code is
 <em>60.2KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.56%</b>
+currently covers about <b style="font-size: 130%;">8.62%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌕 Fri, Apr 1st, 2022.</p>
+<p>Last updated 🌗 Thu, Apr 7th, 2022.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime43.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime50.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -153,8 +153,7 @@ This is just an <a href="https://github.com/microsounds/microsounds.github.io/ra
 <blockquote>
 <p><strong>WARNING</strong><br/>
 <em>This is a quick reference on using <code>debootstrap</code> to install Debian manually without using the official Debian installer.
-Use your common sense, this does not claim to be a comprehensive tutorial to installing Debian.
-You should have some familiarity with GNU/Linux before continuing.</em></p>
+This is not a comprehensive tutorial on *NIX concepts, you should have some familiarity with administrating a GNU/Linux system before continuing.</em></p>
 </blockquote>
 <ol>
 <li>
@@ -235,26 +234,30 @@ $ chroot /mnt /bin/bash
 <p>Install <code>network-manager</code> and the bootloader package <code>grub2</code>.</p>
 <p><code>grub2</code> does not install to your boot disk automatically, use the following:</p>
 <ul>
-<li>BIOS (installs to magic sector at start of disk)
+<li>Build initial grub configuration with <code>/sbin/update-grub</code></li>
+<li>For BIOS (installs to magic sector at start of disk)
 <ul>
-<li><code>install-grub2 --root-directory=/ /dev/sda</code></li>
+<li><code>/sbin/grub-install --root-directory=/ /dev/sda</code></li>
 </ul>
 </li>
-<li>UEFI (installs to EFI partition mounted in <code>/boot/efi</code>)
+<li>For UEFI (installs to EFI partition mounted in <code>/boot/efi</code>)
 <ul>
-<li><code>install-grub2 --root-directory=/ --efi-directory=/boot/efi /dev/sda</code></li>
+<li><code>/sbin/grub-install --root-directory=/ --efi-directory=/boot/efi /dev/sda</code></li>
 </ul>
 </li>
 </ul>
 </li>
 <li>
-<p>Give your <code>root</code> user a password and create your normal user.</p>
+<p>Give your <code>root</code> user a password, create your normal user, and assign it a password also.</p>
 <ul>
-<li>eg. <code>useradd -m USERNAME -m /bin/bash</code></li>
+<li>eg. <code>useradd -m USERNAME -s /bin/bash; passwd USERNAME</code></li>
 </ul>
 </li>
 <li>
-<p><em>Reboot and you should have a working system, skip to Step 2 in the <strong>Quick start</strong> installation below.</em></p>
+<p><em>You should now have a working system, <strong>login as your user</strong> and skip to Step 2 in the <strong>Quick start</strong> below.</em></p>
+<ul>
+<li><em>You can reboot at this point to check your handiwork but it’s not required.</em></li>
+</ul>
 </li>
 </ol>
 </details>
@@ -276,9 +279,9 @@ $ git --git-dir=$HOME/.config/meta --work-tree=$HOME reset --hard
 $ exec $SHELL -l
 </code></pre>
 </li>
-<li>Run <code>post-install</code> in the shell to run post-install scripts automatically.
+<li>Run <code>post-install</code> in the shell to run post-install scripts automatically. Do not run as <code>root</code>
 <ul>
-<li><em>Sets up the package manager, installs and compiles essential packages, window manager, text editor, etc.</em></li>
+<li><em>Sets up the package manager, installs essential packages, window manager, text editor, etc.</em></li>
 </ul>
 </li>
 <li>Reboot to finish.
@@ -945,12 +948,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-201.33KiB
+201.52KiB
 out of a total compressed git history size of
-765.80KiB.</em></p>
+766.52KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@138b032616e0</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@724b0c826e52</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.4K   Apr  1 2022 14:24 rev. 128 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Mar 11 2022 22:34 rev. 77  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -1074,10 +1077,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  26K   Mar 14 2022 22:10 rev. 177 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  26K   Apr  7 2022 16:51 rev. 178 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Fri, 1 Apr 2022 14:24:03 -0700 -->
+<!-- updated Thu, 7 Apr 2022 16:51:41 -0700 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
