Anticipating RX 6400 coming soon

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -34,9 +34,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2022/1/26 -->
+<!-- updated 2022/4/17 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌓 Wed, Jan 26th, 2022.</p>
+<p>Last updated 🌑 Sun, Apr 17th, 2022.</p>
 <blockquote>
 <p><strong>NOTICE</strong><br/><br/>
 <em>I cannot recommend going the SFF route at this time, or even the discrete GPU route in general, every worthwhile card on this list has skyrocketed in price on the used market.</em></p>
@@ -253,6 +253,12 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <td style="text-align: center">2021</td>
 <td style="text-align: center">6766</td>
 <td style="text-align: left">Workstation card.</td>
+</tr>
+<tr>
+<td style="text-align: left">AMD Radeon RX 6400</td>
+<td style="text-align: center">2022</td>
+<td style="text-align: center"><em>unknown</em></td>
+<td style="text-align: left">Unreleased as of posting, available from Sapphire</td>
 </tr>
 </tbody>
 </table>
