Adding new collection page for my figurines.

--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,7 @@ I just really like metaprogramming.</p>
 </div>
 <hr style="width: 40%;"/>
 <h2>Things I’ve made recently<span id="Things-Ive-made-recently"></span></h2>
+<p>I have a collection of notes and writings located at <a href="notes/index.htm"><code>/notes</code></a> if you’re interested.</p>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
 <ul>
