Expanded figure collection page

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/style.css"/>
 	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds"/>
 	<script type="text/javascript" src="/static/script.js"></script>
-	<title>My Figurine Collection | sentimental µsounds</title>
+	<title>My Collection of Assorted Figurines | sentimental µsounds</title>
 </head>
 <body>
 <audio hidden="hidden" id="bgm"></audio>
@@ -34,14 +34,16 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<h1>My Figurine Collection<span id="My-Figurine-Collection"></span></h1>
+<h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
 <p>Last updated 🌒 Thu, Apr 21st, 2022</p>
 <p>Here’s my small collection of figurines and other assorted cute things.
-Most are prize figures of the variety you could win from a Japanese crane machine.
-I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
+Most are “prize figures” of the variety you could win from a Japanese “skill” claw machine,
+but I do no such thing because I don’t live anywhere near one stocked with prize figures I would actually like.</p>
+<!-- Did you know that limited run collectible lumps of PVC and ABS appreciate in value over time the longer they've been out of production? -->
+<p>I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them though.
 This page will do for now, links take you to their catalog entry on <em>mfc</em>.</p>
+<h2>Collection<span id="Collection"></span></h2>
 <p><em>They’re in no particular order, only sorted by date I remember getting it, probably.</em></p>
-<!-- _Sorted by date I unboxed it, probably._ -->
 <div id="fig-thumbs">
 <noscript>
 <blockquote>
@@ -50,7 +52,7 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 </blockquote>
 </noscript>
 </div>
-<h2>Key<span id="Key"></span></h2>
+<div class="aside right">
 <table>
 <thead>
 <tr>
@@ -60,15 +62,20 @@ This page will do for now, links take you to their catalog entry on <em>mfc</em>
 </thead>
 <tbody>
 <tr>
-<td><img alt="ico-fig" src="https://static.myfigurecollection.net/pics/figure/186.jpg"/></td>
+<td><img src="https://static.myfigurecollection.net/pics/figure/186.jpg" alt="ico-fig" /></td>
 <td><strong>Owned</strong></td>
 </tr>
 <tr>
-<td><img alt="ico-fig-fake" src="https://static.myfigurecollection.net/pics/figure/186.jpg"/></td>
+<td><img src="https://static.myfigurecollection.net/pics/figure/186.jpg" alt="ico-fig-fake" /></td>
 <td><strong>Fake/Knockoff</strong></td>
 </tr>
 </tbody>
 </table>
+</div>
+<h2>On Counterfeits<span id="On-Counterfeits"></span></h2>
+<p>If you’re into figure collecting, take care not to fall for counterfeits, these are figures of varying quality sold at abnormal prices and/or designs that are years out of production being sold new.
+Do not assume that physical outlets located in shopping malls, indoor or outdoor swap meets are honest or have any clue what they are selling, they can and will play dumb if it suits them.
+<em>Understand that even if the price is right, with counterfeits, you will get exactly what you pay for.</em></p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
 <p>This gallery is automatically generated, click images to see more user-submitted images on <em>myfigurecollection.net</em>!</p>
 <div class="gallery" id="fig-gallery">
